Fixed image sizing.

--- a/style.css
+++ b/style.css
@@ -35,8 +35,8 @@ table {
     text-align: left;
 }
 img {
-    height: 30%;
-    width: 30%;
+    height: 126px;
+    width: 126px;
 }
 table tr{
     height: min-content;
